[package]
name = "BalatroRustServer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.21.3"
socket2 = "0.6"
uuid = { version = "1.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
